# CartesianProductOptimization

./: .clangd  CMakeLists.txt  README.md
src/: main.c
